@@ -24,7 +24,7 @@ no_index:
     - xt
 requires:
   Class::Utils: 0.03
-  Data::MARC::Leader::Utils: 0.02
+  Data::MARC::Leader::Utils: 0.03
   English: 0
   Error::Pure: 0
   perl: 5.6.2
