@@ -19,7 +19,7 @@ perl_version 5.006002;
 readme_from 'Print.pm';
 recursive_author_tests('xt');
 requires 'Class::Utils' => 0.03;
-requires 'Data::MARC::Leader::Utils' => 0.02;
+requires 'Data::MARC::Leader::Utils' => 0.03;
 requires 'English' => 0;
 requires 'Error::Pure' => 0;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/MARC-Leader-Print/issues',
