@@ -1,4 +1,5 @@
 0.03
+ - Rewrite to new Data::MARC::Leader::Utils.
 
 0.02 2023-11-20T12:25:06+01:00
  - Add ANSI support.
